// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HoverCard /> should renders hidden 1`] = `
<HoverCard
  targetRef={
    Object {
      "current": null,
    }
  }
>
  <ForwardRef
    className="root hidden rounds-sm__all shadow-z4"
    onMouseLeave={[Function]}
    style={
      Object {
        "padding": "16px 16px 24px 16px",
      }
    }
  >
    <ForwardRef(Plate)
      className="card root hidden rounds-sm__all shadow-z4"
      data-testid="product-card:hover-card"
      onMouseLeave={[Function]}
      rounds="m"
      shadow="z4"
      style={
        Object {
          "padding": "16px 16px 24px 16px",
        }
      }
    >
      <div
        className="bg-color__white card root hidden rounds-sm__all shadow-z4 shadow-z4 rounds-md__all"
        data-testid="product-card:hover-card"
        onMouseLeave={[Function]}
        style={
          Object {
            "padding": "16px 16px 24px 16px",
          }
        }
      >
        <ProductInfo />
      </div>
    </ForwardRef(Plate)>
  </ForwardRef>
</HoverCard>
`;

exports[`<HoverCard /> should renders with positioning 1`] = `
Array [
  <div>
    Target
  </div>,
  <HoverCard
    targetRef={
      Object {
        "current": <div>
          Target
        </div>,
      }
    }
  >
    <ForwardRef
      className="root rounds-sm__all shadow-z4"
      onMouseLeave={[Function]}
      style={
        Object {
          "padding": "16px 16px 24px 16px",
        }
      }
    >
      <ForwardRef(Plate)
        className="card root rounds-sm__all shadow-z4"
        data-testid="product-card:hover-card"
        onMouseLeave={[Function]}
        rounds="m"
        shadow="z4"
        style={
          Object {
            "padding": "16px 16px 24px 16px",
          }
        }
      >
        <div
          className="bg-color__white card root rounds-sm__all shadow-z4 shadow-z4 rounds-md__all"
          data-testid="product-card:hover-card"
          onMouseLeave={[Function]}
          style={
            Object {
              "padding": "16px 16px 24px 16px",
            }
          }
        >
          <ProductInfo>
            <Title
              href="https://foo.bar"
              key=".0"
            >
              <ForwardRef(Link)
                className="link line-clamp"
                color="gray87"
                data-testid="product-info:name-link"
                href="https://foo.bar"
              >
                <a
                  className="link link line-clamp gray87"
                  data-testid="product-info:name-link"
                  href="https://foo.bar"
                >
                  Ножницы портновские, 10, 26 см, цвет чёрный
                </a>
              </ForwardRef(Link)>
            </Title>
          </ProductInfo>
        </div>
      </ForwardRef(Plate)>
    </ForwardRef>
  </HoverCard>,
]
`;
